ros2_ws_2/log/build_2023-07-11_15-15-59/py_srvcli/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/lib/python3.10/site-packages/py_srvcli/client_member_function.py", line 30
    minimal_client.get_logger().info(
                                    ^
SyntaxError: '(' was never closed

